--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,4 @@
-# Ignore Play! working directory #
-bin/
-/db
-.eclipse
-/lib/
-/logs/
-/modules
-/project/project
-/project/target
-/target
-tmp/
-test-result
-server.pid
-*.iml
-*.eml
-/dist/
-.cache
+# Eclipse Workspace
+RemoteSystemsTempFiles
+.recommenders
+.metadata
