--- a/study-groups/conf/application.conf
+++ b/study-groups/conf/application.conf
@@ -29,12 +29,13 @@ play.i18n.langs = [ "en" ]
 # ~~~~~
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
-#
-db.default.driver=org.h2.Driver
-db.default.url="jdbc:h2:mem:play"
-# db.default.username=sa
-# db.default.password=""
-#
+
+db.default.driver=com.mysql.jdbc.Driver
+db.default.url="jdbc:mysql://localhost/playdb"
+db.default.username=playdbuser
+db.default.password=play
+db.default.logSql=true
+
 # You can expose this datasource via JNDI if needed (Useful for JPA)
 db.default.jndiName=DefaultDS
 
