--- a/study-groups/conf/application.conf
+++ b/study-groups/conf/application.conf
@@ -45,6 +45,6 @@ jpa.default=defaultPersistenceUnit
 # ~~~~~
 # You can disable evolutions if needed
 # play.evolutions.enabled=false
-
+ebean.default="models.*"
 # You can disable evolutions for a specific datasource if necessary
 # play.evolutions.db.default.enabled=false
